# apps-cf

./: .gitignore  Cargo.toml  README.md  data.json  maintain.md  meta.ld  plan.md  wrangler.toml
.github/workflows/: deploy.yml
.wrangler/cache/: wrangler-account.json
frontend/: index.html  package.json  tailwind.config.js
frontend/src/api/: index.js
frontend/src/assets/: main.css
frontend/src/components/: MainLayout.vue
frontend/src/i18n/: en.js  index.js  zh.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: AdminAudit.vue  AdminConfigs.vue  AdminNotes.vue  AdminTools.vue  AdminUsers.vue  Dashboard.vue  Home.vue  Login.vue  SystemConfig.vue
src/: lib.rs
